welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:6: error: not found: value num
	if (nums(k) > c ) c=num(k)
                            ^